@@ -1,4 +1,5 @@
 iRedMail-0.8.5:
+    * Use EPEL yum repo on RHEL/CentOS 6 by default, but not on RHEL/CentOS 5.
     * Update SQL triggers to insert value for column 'used_quota.domain'
       automatically.
     * Install php53 from vender official yum repo on RHEL/CentOS 5.
